--- a/main.css
+++ b/main.css
@@ -1,35 +1,90 @@
 body {
-	background-color: #2D5E4B;
-  margin: 80px 0; 
+  width: 800px;
+  height: 550px;
+  background-color:  #222;
+   
 }
+
 .mainBoard {
-  margin: 0 auto;
-  margin-left: 90px;
- 
+  width: 500px;
+    margin: 0px auto;
 }
+
+.bgBoard {
+  background-color: #555;
+    height: 500px;
+    width: 500px;
+    padding: 11px;
+    margin: 40px auto;
+    margin-bottom: 0px;
+    position: absolute;
+    border-radius: 20px;
+    z-index: 1;
+    border: 4px solid white;
+}
+
 .row {
-  margin-bottom: 10px; 
+  width: 500px;
+    height: 100px;
+    margin-bottom: 26;
 }
-.row:last-child  {
-    margin-bottom: 0; 
-}
-.row:after {
-    content: "";
-    display: block;
-    clear: both; 
-}
+
 .box {
-  width: 106.25px;
-  height: 106.25px;
-  margin-right: 10px;
-  float: left;
-  border-radius: 3px;
-  background: rgba(238, 228, 218, 0.35); 
+  width: 100px;
+    height: 100px;
+    background-color: #171832;
+    display: inline-block;
+    margin: 10px;
+
 }
-.box:last-child {
-    margin-right: 0; 
+
+.gameBoard {
+    margin-top: 55px;
+    margin-left: 15px;
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    z-index: 2;
 }
-.tile-container {
-  position: absolute;
-  z-index: 2; 
+
+.number { 
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  margin: 10px;
+  visibility: hidden;
+
+  }
+
+.tile {
+  width: 100px;
+  height: 100px;
+  background: #636764;
+  display: inline-block;
+  visibility: visible;
+  content: "Hello";
+  line-height: 50px;
+    margin: 5px;
+    border: 5px solid white;
+    border-radius: 10px;
+}
+
+h2 {
+    color: #F2F2F2;
+    text-align: center;
+    display: inline;
+    margin-left: 210px;
+    margin-right: -140px;
+}
+
+.points {
+    margin-left: 120px;
+}
+
+h1 {
+    color: white;
+    display: inline-block;
+    position: relative;
+    margin-left: 39px;
+    padding-top: 2px;
 }
